<resources>
    <string name="app_name">Diabetter</string>
    <string name="start_now">Start Now</string>
    <string name="have_account">Already have an account?</string>
    <string name="tv_login_title">Welcome Back,</string>
    <string name="tv_login_desc">Let’s continue your healthy journey!</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="tv_confirm">Confirm Password</string>
    <string name="tv_forgetPass">Forget Password?</string>
    <string name="signin">Sign in</string>
    <string name="btn_signinGoogle">Sign in with Google</string>
    <string name="tv_dontHaveAcc">Don\'t have any account?</string>
    <string name="signup">Sign up</string>
    <string name="tv_signup_title">Welcome</string>
    <string name="tv_signup_desc">Let’s start your healthy life journey!</string>
    <string name="tv_welcome_1">Ayo mulai hidup sehatmu dengan membuat menu sehat harian dengan DiaBetter!</string>
    <string name="tv_welcome2">Buat daftar menu harian sesuai dengan keinginan mu dengan DiaBetter!</string>
    <string name="tv_welcome3">Bagikan menu sehat rekomendasi mu kepada banyak orang di DiaBetter!</string>
    <string name="indicator_1">1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="indicator_2">2</string>
    <string name="indicator_3">3</string>
    <string name="indicator_4">4</string>
    <string name="gender_title">Gender</string>
    <string name="body_title">Body condition</string>
    <string name="activity_title">Daily Activities</string>
    <string name="confirmation_title">Data Confirmation</string>
    <string name="choose_gender">Choose your gender</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="continues">Continue</string>
    <string name="tv_body_personalization">Please enter your current age, weight, and height.</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="tv_activity_personalization">Please tell us your current daily activities based on this categories</string>
    <string name="normal_activity">Normal activities (not doing workout)</string>
    <string name="mid_activity">Strenuous activities (doing workout)</string>
    <string name="high_activity">Very strenuous activities (athlete)</string>
    <string name="tv_confirm_personalization">Please make sure the data you have entered matches your current condition.</string>
    <string name="daily_activity">Daily Activities</string>
    <string name="tv_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_home">Hello,</string>
    <string name="home_username">Username</string>
    <string name="your_menu_today">Your menu today!</string>
    <string name="callorie_level">2000</string>
    <string name="callorie">calories</string>
    <string name="see_detail">See detail</string>
    <string name="recommendation_food_for_you">Recommended for you</string>
    <string name="discover_other_foods">Discover other foods</string>
    <string name="see_more">See more</string>
    <string name="fourfive_stars">4.5</string>
    <string name="popular_menus_title">Popular Menus</string>
    <string name="popular_menus_desc">Lets try menu that already help many peoples</string>
    <string name="recommended_food_title">Recommended Foods</string>
    <string name="recommendation_food">Gado-Gado</string>

    <string name="text_refresh1">Feeling unsatisfied?</string>
    <string name="text_refresh2"><u>Click here</u></string>
    <string name="text_refresh3">to</string>
    <string name="text_refresh4">refresh the menu!</string>
    <string name="set_filter">Set your filter rating before refreshing</string>
    <string name="callories">calories</string>
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="refresh_note_title">Note:</string>
    <string name="refresh_note">If you choose no filter, all foods from rating 1-5 will be recommended</string>
    <string name="no_filter">No Filter</string>
    <string name="rating_1">Rating 1+</string>
    <string name="rating_2">Rating 2+</string>
    <string name="rating_3">Rating 3+</string>
    <string name="rating_4">Rating 4+</string>
    <string name="Profile">Your profile</string>
    <string name="years_old">years old</string>
    <string name="edit_profile">Edit profile</string>
    <string name="tv_see_history">See what you have eaten before</string>
    <string name="logout">Logout</string>
    <string name="diabetter">Diabetter</string>
    <string name="your_profile">Your Profile</string>
    <string name="edit_image">Edit photo</string>
    <string name="save_changes">Save changes</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_food">DetailFoodActivity</string>
    <string name="calories_capital">Calories</string>
    <string name="tv_carbohydrate">Carbohydrate</string>
    <string name="tv_protein">Protein</string>
    <string name="tv_fat">Fat</string>
    <string name="tv_type">Type</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="choose_menu">Choose this menu for today</string>
    <string name="food_nutrition_facts">Foods nutrition facts</string>
    <string name="history">History</string>
    <string name="profile_menu">Profile</string>
    <string name="menu_nav">Menu</string>
    <string name="makanan_nav">Makanan</string>
</resources>