<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="0dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tv_title_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/set_filter"
                android:textColor="@color/secondary_800"
                android:textSize="@dimen/heading_5"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rg_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_title_refresh"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="4dp">

                <RadioButton
                    android:id="@+id/rb0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:background="@null"
                    android:checked="true"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:paddingLeft="4dp"
                    android:text="@string/no_filter"
                    android:textColor="@color/secondary_800"
                    android:textSize="@dimen/body_4"
                    app:buttonTint="@color/secondary_600" />
                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:paddingLeft="4dp"
                    android:layout_marginLeft="-4dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="@dimen/body_4"
                    android:textColor="@color/secondary_800"
                    android:text="@string/rating_1"
                    app:buttonTint="@color/secondary_600"
                    android:background="@null"/>
                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:paddingLeft="4dp"
                    android:layout_marginLeft="-4dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="@dimen/body_4"
                    android:textColor="@color/secondary_800"
                    android:text="@string/rating_2"
                    android:background="@null"
                    app:buttonTint="@color/secondary_600"/>
                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:paddingLeft="4dp"
                    android:layout_marginLeft="-4dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="@dimen/body_4"
                    android:textColor="@color/secondary_800"
                    android:text="@string/rating_3"
                    android:background="@null"
                    app:buttonTint="@color/secondary_600"/>
                <RadioButton
                    android:id="@+id/rb4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:paddingLeft="4dp"
                    android:layout_marginLeft="-4dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="@dimen/body_4"
                    android:textColor="@color/secondary_800"
                    android:text="@string/rating_4"
                    android:background="@null"
                    app:buttonTint="@color/secondary_600"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tv_note_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_note_title"
                app:layout_constraintTop_toBottomOf="@id/rg_rating"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="@dimen/body_4"
                android:textColor="@color/secondary_800"/>

            <TextView
                android:id="@+id/tv_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_note"
                android:maxLines="2"
                app:layout_constraintTop_toBottomOf="@id/tv_note_title"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/body_5"
                android:textColor="@color/secondary_800"/>


            <Button
                android:id="@+id/btn_refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/primary_500"
                android:fontFamily="@font/poppins_semi_bold"
                android:padding="12dp"
                android:text="@string/refresh"
                android:textColor="@color/white"
                android:textSize="@dimen/body_5"
                app:layout_constraintTop_toBottomOf="@id/tv_note" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_semi_bold"
                android:padding="12dp"
                android:text="@string/cancel"
                android:textColor="@color/primary_600"
                android:textSize="@dimen/body_5"
                app:layout_constraintTop_toBottomOf="@id/btn_refresh"
                app:strokeColor="@color/primary_300"
                app:strokeWidth="3dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>