<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_500"
    tools:context=".view.signup.SignUpActivity">

    <RelativeLayout
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:background="@drawable/big_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="25dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            app:srcCompat="@drawable/diabetter_logo" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/tv_signup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signup_title"
                android:textSize="@dimen/body_1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_signup_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signup_desc"
                android:textSize="@dimen/body_5" />

            <View
                android:id="@+id/view_1"
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_email"
                android:textSize="@dimen/body_3"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_rectangle"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="12sp" />

            <View
                android:id="@+id/view_2"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_password"
                android:textSize="@dimen/body_3"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_rectangle"
                android:drawableEnd="@drawable/eye_close_icon"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="12sp" />

            <View
                android:id="@+id/view_3"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_confirm"
                android:textSize="@dimen/body_3"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_rectangle"
                android:drawableEnd="@drawable/eye_close_icon"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textSize="12sp" />

            <View
                android:id="@+id/view_4"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="@dimen/body_3"
                android:textStyle="bold"
                app:backgroundTint="@color/primary_500"
                app:cornerRadius="20dp" />

            <View
                android:id="@+id/view_5"
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Or" />

            <View
                android:id="@+id/view_6"
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_googleSign"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/google_icon"
                android:gravity="center"
                android:isScrollContainer="false"
                android:singleLine="false"
                android:text="@string/btn_signinGoogle"
                android:textColor="#1f1f1f"
                app:backgroundTint="@android:color/transparent"
                app:strokeColor="@color/tetriary"
                app:strokeWidth="2dp" />

            <View
                android:id="@+id/view_7"
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_haveAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="70dp"
                    android:text="@string/have_account" />

                <TextView
                    android:id="@+id/tv_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_toEndOf="@+id/tv_haveAcc"
                    android:text="@string/signin"
                    android:textColor="@color/primary_700" />

            </RelativeLayout>

            <View
                android:id="@+id/view_8"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>