<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.personalization.ConfirmPersonalizationFragment">

    <TextView
        android:id="@+id/tv_confirm_personalization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_confirm_personalization"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="12sp"
        android:maxLines="2"/>

    <TextView
        android:id="@+id/tv_gender_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm_personalization"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/gender_title"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="12sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_gender_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/gender_title"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/tv_age_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/age"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="12sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_age_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/age"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/tv_weight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_age"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/weight"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="12sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_weight_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/weight"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/tv_height_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_weight"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/height"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="12sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_height_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/height"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/tv_daily_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_height"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/daily_activity"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="12sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/tv_daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/daily_activity"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:layout_marginStart="24dp"
        android:paddingBottom="48dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>