<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.personalization.ActivityPersonalizationFragment">

    <TextView
        android:id="@+id/tv_activity_personalization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_activity_personalization"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="12sp"
        android:maxLines="2"/>

    <RadioGroup
        android:id="@+id/rg_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_activity_personalization"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:paddingBottom="48dp">
        <RadioButton
            android:id="@+id/radio_normal_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_personalization"
            android:button="@null"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/normal_activity"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_activity_personalization" />

        <RadioButton
            android:id="@+id/radio_mid_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/radio_personalization"
            android:button="@null"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/mid_activity"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_normal_activities" />

        <RadioButton
            android:id="@+id/radio_high_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/radio_personalization"
            android:button="@null"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/high_activity"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_mid_activity" />
    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>