<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_500"
    tools:context=".view.main.ui.menu.MenuFragment">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/hello_home"
        android:textColor="@color/white"
        android:textSize="@dimen/heading_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/poppins_light"
        android:includeFontPadding="false"
        android:text="@string/home_username"
        android:textColor="@color/white"
        android:textSize="@dimen/heading_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hello" />

    <ImageView
        android:id="@+id/iv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:padding="4dp"
        android:src="@drawable/save_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bg_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/big_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_page"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="-30dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/bg_menu"
        app:layout_constraintTop_toBottomOf="@+id/tv_username">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_popmenu_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/popular_menus_title"
                android:textColor="@color/secondary_800"
                android:textSize="@dimen/body_1" />

            <TextView
                android:id="@+id/tv_popmenu_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/popular_menus_desc"
                android:textColor="@color/secondary_800"
                android:textSize="@dimen/body_3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popmenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <ProgressBar
        android:id="@+id/progress_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>